--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             container.innerHTML = '';
             spinner.style.display = 'block';
 
-            if (SHEET_ID === 'DÁN_MÃ_LỆNH_BÀI_VÀO_ĐÂY') {
+            if (SHEET_ID === 'https://docs.google.com/spreadsheets/d/1dZA9LTtjrKEYZb6kUm4E7p2XLt5NBYqvnKmYarIpxCg/edit?usp=sharing') {
                 spinner.style.display = 'none';
                 container.innerHTML = "<p style='color: #d50000; padding: 20px; font-weight: bold;'>⚠️ Bệ hạ chưa dán Sheet ID vào mã nguồn HTML! Vui lòng mở code ra và dán vào dòng 120.</p>";
                 return;
