--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <script>
         // ==========================================
         // 🚨 THẦN ĐÃ LẮP SẴN ĐƯỜNG LINK THẬT CỦA BỆ HẠ VÀO ĐÂY, BỆ HẠ KHÔNG CẦN SỬA GÌ NỮA 🚨
-        const SHEET_LINK = 'https://docs.google.com/spreadsheets/d/1dZA9LTjrKEYZb6kUm4E7p2XLt5NBYqvnKmYarlpxCg/edit';
+        const SHEET_LINK = 'https://docs.google.com/spreadsheets/d/1dZA9LTtjrKEYZb6kUm4E7p2XLt5NBYqvnKmYarIpxCg/edit?usp=sharing';
         // ==========================================
 
         let cloudData = []; 
